--- a/cal.html
+++ b/cal.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator | Hemant</title>
+  <title>Calculator</title>
   <link rel="stylesheet" href="cal.css">
   <link rel="icon" type="image/icon" href="https://user-images.githubusercontent.com/89316018/183997051-d8b1e415-969c-4e5a-8368-29b322c238fb.png">
 </head>
